# ntm

./: .editorconfig  CHANGELOG.md  TODO.md  ntm.cabal
app/: Main.hs  Math.hs  Memory.hs  NeuralNetwork.hs  Ntm.hs  Parameter.hs  TrainData.hs  Utils.hs
